# tech-demos

./: .gitignore  .pre-commit-config.yml  MAKEFILE  README.md  docker-compose.yml  hello.py  mongo_connection.py  pyproject.toml
services/mongo-exploration/: Makefile  README.md  docker-compose.yml  document.py  hello.py  mongo_connection.py  pyproject.toml  walkthrough.ipynb
services/mongo-exploration/src/: mongo_connection.py
services/mongobeanie/: pyproject.toml  walkthrough.ipynb
services/mongobeanie/notebooks/: walkthrough.ipynb
services/mongodb_exploration/: README.md  pyproject.toml  walkthrough.ipynb
services/mongodb_exploration/src/mongodb_exploration/: main.py
