[project]
name = "mongobeanie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "motor>=3.3.0",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "click>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/mongobeanie"]

[tool.uv]
package = true

[project.scripts]
mongo-demo = "mongo_connection:run_mongodb_test"
